sjengida/c1/nk_attacked
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/nk_attacked/src/attacks.c:757:7: error: use of undeclared identifier 'setup_attackers_bishop_o'
v10 = setup_attackers_bishop_o[v9]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/nk_attacked/src/attacks.c:783:54: error: use of undeclared identifier 'jpt_401814'
while ( board[square + ( __int64)*( int *)( ( char *)jpt_401814 + v15)] != 3 ) 
                                                     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/nk_attacked/src/attacks.c:791:7: error: use of undeclared identifier 'setup_attackers_rook_o'
v17 = setup_attackers_rook_o[v16]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/nk_attacked/src/attacks.c:818:6: error: use of undeclared identifier 'setup_attackers_bishop_o'
v3 = setup_attackers_bishop_o[v2]; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/nk_attacked/src/attacks.c:830:54: error: use of undeclared identifier 'jpt_401814'
while ( board[square + ( __int64)*( int *)( ( char *)jpt_401814 + v7)] != 4 ) 
                                                     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/nk_attacked/src/attacks.c:838:7: error: use of undeclared identifier 'setup_attackers_rook_o'
v21 = setup_attackers_rook_o[v8]; 
      ^
6 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/nk_attacked/src/obj/attacks.o] Error 1
